# FileSyncService

./: .gitignore  README.md
client/: CMakeLists.txt  client.cpp  main.cpp
client/src/: CMakeLists.txt  Client.cpp  Client.h  client.cpp  client.h
client/src/commands/: Command.cpp  Command.h  DeleteCommand.cpp  DeleteCommand.h  DirectoryListingCommand.cpp  DirectoryListingCommand.h  DownloadFileCommand.cpp  DownloadFileCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  InfoCommand.cpp  InfoCommand.h  MakeDirectoryCommand.cpp  MakeDirectoryCommand.h  QuitCommand.cpp  QuitCommand.h  RenameCommand.cpp  RenameCommand.h  SynchronizeCommand.cpp  SynchronizeCommand.h  UploadFileCommand.cpp  UploadFileCommand.h
client/src/exceptions/: EndSessionException.h
client/src/utils/: Logger.cpp  Logger.h  StringSplitter.cpp  StringSplitter.h  TimestampConverter.h
server/: CMakeLists.txt  main.cpp  server.cpp
server/src/: CMakeLists.txt  Server.cpp  Server.h
server/src/commands/: Command.cpp  Command.h  DeleteCommand.cpp  DeleteCommand.h  DirectoryListingCommand.cpp  DirectoryListingCommand.h  DownloadFileCommand.cpp  DownloadFileCommand.h  ICommand.h  InfoCommand.cpp  InfoCommand.h  MakeDirectoryCommand.cpp  (+7 more)
tests/: CMakeLists.txt  README.md  main.cpp
tests/tests/: CMakeLists.txt  DelCommandTest.cpp  DelCommandTest.h  DirCommandTest.cpp  DirCommandTest.h  GetCommandTest.cpp  GetCommandTest.h  InfoCommandTest.cpp  InfoCommandTest.h  MkdirCommandTest.cpp  MkdirCommandTest.h  PutCommandTest.cpp  PutCommandTest.h  RenCommandTest.cpp  RenCommandTest.h  StringSplitter.cpp  StringSplitter.h  Test.cpp  Test.h  Tests.h
(+10 files in other folders)
